force-app/main/default/objects/Lead_Document_Request_Reference__c/Lead_Document_Request_Reference__c.object-meta.xml
<CustomObject>
    <description>Reference catalog for reusable Lead-stage borrower document request packages.</description>
    <label>Lead Document Request Reference</label>
    <nameField>
        <displayFormat>LDRR-{0000}</displayFormat>
        <label>Lead Document Request Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Document Request References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>