force-app/main/default/objects/Lead_Document_Request_Reference__c/fields/Borrower_Description__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Description__c</fullName>
    <label>Borrower Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>