force-app/main/default/objects/Lead_Document_Request_Reference__c/fields/Can_Borrower_See__c.field-meta.xml
<CustomField>
    <fullName>Can_Borrower_See__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Borrower See</label>
    <type>Checkbox</type>
</CustomField>