force-app/main/default/objects/Lead_Document_Request_Reference__c/fields/Condition_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Condition_Group_Key__c</fullName>
    <label>Condition Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>