force-app/main/default/objects/Lead_Document_Request_Reference__c/fields/Include_In_Email__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include In Email</label>
    <type>Checkbox</type>
</CustomField>