force-app/main/default/objects/Lead_Document_Request_Reference__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>