force-app/main/default/objects/Lead_Document_Request_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Borrower_Label__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Loan_Purpose__c</columns>
    <columns>Loan_Type__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Self_Employment_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>